--- a/environments/staging/values.yaml
+++ b/environments/staging/values.yaml
@@ -10,6 +10,7 @@ redis:
   enabled: false
 
 global:
+  enableRootChart: true
   enableSitemap: false
   debug: false
   environmentName: staging
@@ -51,19 +52,18 @@ kibana:
   elasticsearchUrl: http://mojp-dbs-elasticsearch:9200
 
 mojp-dbs-pipelines:
-  enabled: true
-  # these jobs will re-run only if any of the values change
-  clearmashGetEntityIdsJob:
-    image: gcr.io/bh-org-01/mojp-dbs-pipelines-cd:937b8dfab43bdad40f684c3d0ed23367407d478a
-  clearmashSplitEntitiesFoldersJob:
-    image: gcr.io/bh-org-01/mojp-dbs-pipelines-cd:7bac0da9c1777351f40f422c664a7168b52e218a
-    input: gs://mojp-dbs-pipelines-data/2018-01-11-16-09
-  clearmashDownloadEntitiesJob:
-    image: gcr.io/bh-org-01/mojp-dbs-pipelines:3670ab4098b65cc1642b35b8d8dee79f4f5bb3d5
-    input: gs://mojp-dbs-pipelines-data/2018-01-02-10-30/clearmash/entity-ids/
-  clearmashPrepForElasticsearch:
-    image: gcr.io/bh-org-01/mojp-dbs-pipelines:b62285d10954ed7902cf6f8d9d10b16022e61cd1
-    input: gs://mojp-dbs-pipelines-data/2018-01-02-12-29/clearmash/download-entities/
+  enabled: false
+#  clearmashGetEntityIdsJob:
+#    image: gcr.io/bh-org-01/mojp-dbs-pipelines-cd:937b8dfab43bdad40f684c3d0ed23367407d478a
+#  clearmashSplitEntitiesFoldersJob:
+#    image: gcr.io/bh-org-01/mojp-dbs-pipelines-cd:7bac0da9c1777351f40f422c664a7168b52e218a
+#    input: gs://mojp-dbs-pipelines-data/2018-01-11-16-09
+#  clearmashDownloadEntitiesJob:
+#    image: gcr.io/bh-org-01/mojp-dbs-pipelines:3670ab4098b65cc1642b35b8d8dee79f4f5bb3d5
+#    input: gs://mojp-dbs-pipelines-data/2018-01-02-10-30/clearmash/entity-ids/
+#  clearmashPrepForElasticsearch:
+#    image: gcr.io/bh-org-01/mojp-dbs-pipelines:b62285d10954ed7902cf6f8d9d10b16022e61cd1
+#    input: gs://mojp-dbs-pipelines-data/2018-01-02-12-29/clearmash/download-entities/
 
 mojp-dbs-searchapi:
   enabled: true
