enable SSL certificate renewal via cloudflare DNS api for authentication, disable continuous deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: bash
 sudo: required
 env:
   matrix:
-  - DEPLOY_ENVIRONMENT=staging DEPLOY_BRANCH=master
+#  - DEPLOY_ENVIRONMENT=staging DEPLOY_BRANCH=master
 #  - DEPLOY_ENVIRONMENT=production DEPLOY_TAGS=true
 services:
 - docker
