--- a/environments/production/values.yaml
+++ b/environments/production/values.yaml
@@ -47,7 +47,7 @@ traefik:
   enableCjhProxy: true
   frontHostRule: "Host: dbs.bh.org.il, test-dbs.bh.org.il;"
   loadBalancerIP: 35.205.123.187
-  nodeHostName: gke-mojp-default-pool-33bac5d8-rm42
+  # nodeHostName: gke-mojp-default-pool-33bac5d8-rm42
   rootHost: "dbs.bh.org.il"
   dnsProvider: cloudflare
   CLOUDFLARE_EMAIL: nurit@bh.org.il
