--- a/manifests/ark/10-deployment.yaml
+++ b/manifests/ark/10-deployment.yaml
@@ -33,7 +33,7 @@ spec:
       serviceAccountName: ark
       containers:
         - name: ark
-          image: gcr.io/heptio-images/ark:latest
+          image: gcr.io/heptio-images/ark:v0.9.11
           ports:
             - name: metrics
               containerPort: 8085
