--- a/manifests/redirector/app-deployment.yaml
+++ b/manifests/redirector/app-deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: redirector-app
   namespace: production
 spec:
-  replicas: 1
+  replicas: 2
   template:
     metadata:
       labels:
@@ -14,6 +14,9 @@ spec:
       - name: github
       containers:
       - name: app
-        image: docker.pkg.github.com/beit-hatfutsot/dbs-front/redirector-app:latest
+        image: docker.pkg.github.com/beit-hatfutsot/dbs-front/redirector-app:v6
         ports:
         - {containerPort: 5000}
+        env:
+          - name: REDIRECTOR_ENABLED
+            value: "yes"
