--- a/manifests/redirector/app-deployment.yaml
+++ b/manifests/redirector/app-deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: redirector-app
   namespace: production
 spec:
-  replicas: 2
+  replicas: 4
   template:
     metadata:
       labels:
@@ -14,7 +14,8 @@ spec:
       - name: github
       containers:
       - name: app
-        image: docker.pkg.github.com/beit-hatfutsot/dbs-front/redirector-app:v6
+        image: docker.pkg.github.com/beit-hatfutsot/dbs-front/redirector-app:v7
+        resources: {"requests": {"cpu": "100m", "memory": "700Mi"}, "limits": {"memory": "1500Mi"}}
         ports:
         - {containerPort: 5000}
         env:
